--- a/requirements.txt
+++ b/requirements.txt
@@ -1,23 +1,21 @@
-annotated-types
-anyio
-click
-colorama
-exceptiongroup
-fastapi
-fastapi-utils
-greenlet
-h11
-idna
-importlib-metadata
-#psycopg2==2.9.6
-#psycopg2-binary==2.9.6
-psycopg2-binary
-pydantic
-pydantic-core
-sniffio
-SQLAlchemy
-starlette
-typing-extensions
-uuid
-uvicorn
-zipp
+annotated-types==0.5.0
+anyio==3.7.1
+click==8.1.6
+colorama==0.4.6
+exceptiongroup==1.1.2
+fastapi==0.100.0
+fastapi-utils==0.2.1
+greenlet==2.0.2
+h11==0.14.0
+idna==3.4
+importlib-metadata==6.8.0
+psycopg2-binary==2.9.6
+pydantic==1.10.12
+pydantic_core==2.4.0
+sniffio==1.3.0
+SQLAlchemy==1.4.49
+starlette==0.27.0
+typing_extensions==4.7.1
+uuid==1.30
+uvicorn==0.23.1
+zipp==3.16.2
