--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,10 +1,13 @@
 volumes:
   data-vol:
-
+networks:
+  app_network:
+    name: app_network
+    
 services:
 
   pgsql:
-    image: postgres:15
+    image: postgres:15.1-alpine
     restart: always
     environment:
       POSTGRES_PASSWORD: 1234
@@ -14,11 +17,24 @@ services:
       - data-vol:/var/lib/postgresql/data
     expose:
       - 5432
+    ports:
+      - 5432:5432
+    networks:
+      - app_network
+    healthcheck:
+      test: ["CMD-SHELL", "psql -U postgres", "pg_isready", "-U", "postgres", "-d", "postgres"]
+      interval: 10s
+      timeout: 30s
+      retries: 5
+      start_period: 5s
   python:
     build:
       context: ./application
       dockerfile: Dockerfile
     depends_on:
-      - pgsql
+      pgsql:
+        condition: service_healthy
     ports:
       - 8000:80
+    networks:
+      - app_network
