--- a/application/Dockerfile
+++ b/application/Dockerfile
@@ -4,4 +4,4 @@ COPY . /appplication
 RUN pip install --upgrade pip --user
 RUN pip install -r requirements.txt
 EXPOSE 80
-CMD ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "80"]
+CMD ["uvicorn", "run:server", "--host", "0.0.0.0", "--port", "80"]
