--- a/application/requirements.txt
+++ b/application/requirements.txt
@@ -1,21 +1,46 @@
 annotated-types==0.5.0
 anyio==3.7.1
+async-timeout==4.0.2
+certifi==2023.7.22
+cfgv==3.3.1
+charset-normalizer==3.2.0
 click==8.1.6
 colorama==0.4.6
+distlib==0.3.7
 exceptiongroup==1.1.2
 fastapi==0.100.0
 fastapi-utils==0.2.1
+filelock==3.12.2
 greenlet==2.0.2
 h11==0.14.0
+identify==2.5.26
 idna==3.4
 importlib-metadata==6.8.0
+iniconfig==2.0.0
+mypy==1.4.1
+mypy-extensions==1.0.0
+nodeenv==1.8.0
+packaging==23.1
+platformdirs==3.10.0
+pluggy==1.2.0
+pre-commit==3.3.3
 psycopg2-binary==2.9.6
 pydantic==1.10.12
 pydantic_core==2.4.0
+pytest==7.4.0
+python-dotenv==1.0.0
+PyYAML==6.0.1
+redis==4.6.0
+requests==2.31.0
 sniffio==1.3.0
 SQLAlchemy==1.4.49
 starlette==0.27.0
+tomli==2.0.1
+types-requests==2.31.0.2
+types-urllib3==1.26.25.14
 typing_extensions==4.7.1
+urllib3==2.0.4
 uuid==1.30
 uvicorn==0.23.1
+virtualenv==20.24.2
 zipp==3.16.2
