--- a/application/requirements.txt
+++ b/application/requirements.txt
@@ -34,6 +34,7 @@ redis==4.6.0
 requests==2.31.0
 sniffio==1.3.0
 SQLAlchemy==1.4.49
+sqlalchemy-stubs==0.4
 starlette==0.27.0
 tomli==2.0.1
 types-requests==2.31.0.2
