--- a/application/requirements.txt
+++ b/application/requirements.txt
@@ -1,6 +1,7 @@
 annotated-types==0.5.0
 anyio==3.7.1
 async-timeout==4.0.2
+cached-property==1.5.2
 certifi==2023.7.22
 cfgv==3.3.1
 charset-normalizer==3.2.0
@@ -16,6 +17,7 @@ h11==0.14.0
 identify==2.5.26
 idna==3.4
 importlib-metadata==6.8.0
+inflection==0.5.1
 iniconfig==2.0.0
 mypy==1.4.1
 mypy-extensions==1.0.0
@@ -34,11 +36,14 @@ redis==4.6.0
 requests==2.31.0
 sniffio==1.3.0
 SQLAlchemy==1.4.49
+sqlalchemy-orm==1.2.10
 sqlalchemy-stubs==0.4
+sqlalchemy2-stubs==0.0.2a35
 starlette==0.27.0
 tomli==2.0.1
 types-requests==2.31.0.2
 types-urllib3==1.26.25.14
+typing-inspect==0.9.0
 typing_extensions==4.7.1
 urllib3==2.0.4
 uuid==1.30
