--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
-POSTGRESHOST="pgsql" # localhost/pgsql
+POSTGRESHOST="localhost" # localhost/pgsql
 POSTGRESDB="postgres"
 POSTGRESUSERNAME="postgres"
 POSTGRESPASSWORD="1234"
 #
-REDISHOST="redis" # localhost/redis
+REDISHOST="localhost" # localhost/redis
